@@ -217,9 +217,6 @@
      </item>
      <item>
       <widget class="QCheckBox" name="kcfg_AnimateDropTarget" >
-       <property name="enabled" >
-        <bool>false</bool>
-       </property>
        <property name="text" >
         <string>Enable animations</string>
        </property>
